test/files/neg/t2031.check
t2031.scala:8: error: polymorphic expression cannot be instantiated to expected type;
 found   : [A]scala.collection.generic.Builder[A,scala.collection.immutable.TreeSet[A]]
 required: scala.collection.generic.BuilderFactory[Int,?,scala.collection.immutable.TreeSet[Int]]
 res0.map(x => x)(TreeSet.newBuilder)
                          ^
one error found
